# AI-Engineer-Certification-Challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  MacroMind_Demo.pptx  README.md  REPORT.md  app.py  chainlit.md  create_slides.js  pyproject.toml
.chainlit/: config.toml
data/nutrition_science/: alcohol_nutrition_guide.txt  harvard_protein_needs.txt  mayo_clinic_plateau.txt  mifflin_st_jeor_tdee.txt  nasm_calorie_macro_guide.txt
data/recipes/: recipes_filtered.csv
eval/: dense_results.csv  ensemble_results.csv  testset.jsonl
public/: dashboard_mode.css  dashboard_mode.js
src/macro_mate/: __init__.py  agent.py  config.py  data_loader.py  eval_dataset.py  evaluate.py  memory.py  nutrition_pipeline.py  persistent_store.py  prompts.py  retrievers.py  tools.py  utils.py  vector_store.py
tests/: test_demo_flow.py
